--- a/Slutprojekt/site/CSS/main.css
+++ b/Slutprojekt/site/CSS/main.css
@@ -25,6 +25,11 @@ body{
     font-family: 'Catamaran', sans-serif;
 }
 
+.Text2{
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+}
+
 .frontpic{
     height: 318px;
     grid-area: headpic;
@@ -51,7 +56,7 @@ i.material-icons{
     z-index: 101;
 }
 
-.menubox{
+nav{
     height: 0;
     width: 100vw;
     background-color: #828D68;
@@ -105,7 +110,10 @@ a{
 
 ul a{
     font-size: 25px;
+    letter-spacing: 3px;
 }
+
+
 
 .f-projects{
     grid-area: Projects;
@@ -217,6 +225,13 @@ h2{
     margin-left: 10px;
 }
 
+figure{
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0;
+    margin-inline-end: 0;
+}
+
 .mediumtext{
     font-size: 35px;
     margin-right: 30px;
@@ -272,7 +287,7 @@ h2{
 }
 
 
-.Profile{
+.Profile-pic{
     height: 190px;
     width: 147px;
     background-color: white;
@@ -335,7 +350,7 @@ h2{
 }
 
 .wrapp-P{
-    grid-template-rows: 318px 86px 160px 70px auto 30px auto 30px 7px 30px auto 50px ;
+    grid-template-rows: 318px 86px 160px 70px auto 30px auto 30px 7px 30px auto 30px 7px 30px auto 50px ;
     grid-template-areas: 
     "Projects"
     "header"
@@ -348,7 +363,41 @@ h2{
     "sep"
     "."
     "game-desc"
+    "."
+    "sep2"
+    "."
+    "Review"
     ".";
+}
+
+.review-container{
+    grid-area: Review;
+    margin: 30px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.review{
+    display: grid;
+    grid-template-rows: auto auto;
+    grid-template-columns: auto 50px;
+}
+
+.review :nth-child(1){
+    font-weight: bold;
+    letter-spacing: 1.5px;
+}
+
+.review :nth-child(2){
+    font-weight: bold;
+    font-style: italic;
+    letter-spacing: 2px;
+}
+
+.review :nth-child(3){
+    grid-column: span 2;
+    font-style: italic;
+    line-height: 1.6;
 }
 
 .trailer{
@@ -380,6 +429,10 @@ h2{
 
 .P-sep{
     grid-area: sep;
+}
+
+.P-sep2{
+    grid-area: sep2;
 }
 
 .game-desc{
@@ -468,7 +521,7 @@ button{
         margin-right: auto ;
     }
     
-    .menubox{
+    nav{
         height: 100%;
         width: 100%;
         background-color: transparent;
@@ -493,6 +546,10 @@ button{
         align-items: center;
     }
 
+    li a:hover{
+        text-shadow: 0px 0px 20px rgb(255, 255, 255);
+    }
+
     .wrapper{
         grid-template-columns: 220px 1fr 1fr 1fr;
         grid-template-rows: 620px auto;    
@@ -509,7 +566,7 @@ button{
     }
 
     .frontbox{
-        margin: 20px;
+        margin: auto;
         margin-left: 35px;
         margin-right: 35px;
     }
@@ -572,7 +629,7 @@ button{
         "header . . Desc1 . . Desc2 ."
         "header . . Sep1 . . Sep2 ."
         "header . . . . . . ."
-        "header . . . More . . ." ;
+        "header . . More More More . ." ;
     }
 
     .t-sep3{
@@ -584,7 +641,7 @@ button{
     }
 
     
-    .Profile{
+    .Profile-pic{
         height: 285px;
         width: 220px;
         margin: 0;
@@ -617,11 +674,7 @@ button{
         "header . picalbum . sep ."
         "header . . . game-desc ."
         "header . . . sep2 ."
-        "header . trailer trailer trailer ." ;
-    }
-
-    .P-sep2{
-        grid-area: sep2;
+        "header . trailer trailer Review ." ;
     }
 
     .picturealbum{
@@ -684,6 +737,11 @@ button{
 
     .pic3{
         background-image: url("../img/Screenshot-3-Desktop.png")
+    }
+
+    .review-container{
+        margin-top: 70px;
+        margin-bottom: 70px;
     }
 
 }
